[Fix] BaseService 수정 (#74)

--- a/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Configurations/Development.xcconfig
+++ b/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Configurations/Development.xcconfig
@@ -14,3 +14,5 @@ KAKAO_NATIVE_APP_KEY = 88a3ac99ca375540b12b24516c36751a
 BASE_URL = http:/$()/43.202.136.114/
 
 KAKAO_APPSTORE = itms-apps://itunes.apple.com/app/362057947
+
+ACCESS_TOKEN = Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiI0IiwiaWF0IjoxNzIxMDY2MDA2LCJleHAiOjE3MjM0ODUxMDZ9.-3xRrDlDixBsHKH7sUMjcYkHT8ry5f3STuwmL27abF8
