--- a/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Info.plist
+++ b/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>사진 접근을 위해 권한이 필요합니다. 허용하시겠습니까?</string>
 	<key>KAKAO_APPSTORE</key>
