[Setting] API Key 설정 (#206)

--- a/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Configurations/Development.xcconfig
+++ b/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Configurations/Development.xcconfig
@@ -14,3 +14,5 @@ KAKAO_NATIVE_APP_KEY = 88a3ac99ca375540b12b24516c36751a
 BASE_URL = http:/$()/43.202.136.114/
 
 KAKAO_APPSTORE = itms-apps://itunes.apple.com/app/362057947
+
+AMPLITUDE_API_KEY = 64978a485f90b6b5fd9bd823c936e1dc
