[Feat] amplitude 로그인 & 메인 적용 (#206)

--- a/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Info.plist
+++ b/DATEROAD-iOS/DATEROAD-iOS/Global/Settings/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>AMPLITUDE_API_KEY</key>
-	<string>${AMPLITUDE_API_KEY}</string>
+	<string>$(AMPLITUDE_API_KEY)</string>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
 	<key>CFBundleURLTypes</key>
