--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,6 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+*.xcconfig
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcode,cocoapods
